2006-09-20  Chris Moller  <moller@mollerware.com>

	* frysk2131/ptrace-test.c: Added test to demonstrate PTRACE_DETACH
	failure under utrace-compatible ptrace.

2006-09-19    <swagiaal@redhat.com>

	* audit/test-audit-libs.c: New file.
	* Makefile.am: Added test-audit-libs to the test suit.

2006-09-19  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (XFAIL_TESTS): Add frysk3228/LoggerParent.
	* frysk3228/LoggerParent.java: New test.  From Mark Wielaard.

2006-09-07  Andrew Cagney  <cagney@redhat.com>

	* frysk2130/strace-clone-exec.shin: Add check for strace, fail
	when not installed.

2006-08-31  Mike Cvet  <mcvet@redhat.com>

	* frysk2760/TestBarrier.java (GCThread.run): Removed frivolous
	print statement.
	* frysk2760/TestBarrier.cxx: Extensively cleaned up, sends 
	proper kill signals now, regarding #3151.

2006-08-10  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (TESTS): Revert 2006-08-08 change.  Test must pass.

2006-08-08  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am: Move frysk2130/strace-clone-exec.sh to XFAIL_TESTS.

2006-08-02  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am: Do not list XFAIL_TESTS twice when declaring
	that all TESTS depend on Makefile.

2006-06-15  Nurdin Premji  <npremji@redhat.com>

	* frysk2595/ptrace_after_exec.c: Added #include <linux.syscall.h>
	and <sys/syscall>.
	* frysk2595/ptrace_after_exec_of_thread.c: Ditto.
	* frysk2595/ptrace_after_forked_thread_exits.c: Ditto.
	* frysk2595/ptrace_before_forked_thread_exits.c: Ditto.
	* frysk2595/ptrace_peek_wrong_thread.c: Ditto.
	* process/multi_child_exec.c: Ditto.
	* process/multi_child_parent_exec.c: Ditto.
	* process/multi_parent_exec.c: Ditto.
	* process/single_exec.c: Ditto.
	* Makefile.am (AM_CFLAGS): Add -I$(top_srcdir)/include.

2006-06-15  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (frysk2760_FILES): Add frysk2760/linux.ptrace.h

2006-06-15  Mike Cvet  <mcvet@redhat.com>

	* frysk2760/TestBarrier.java: Added
	* frysk2760/TestBarrier.cxx: Added