@@ -1,3 +1,8 @@
+2006-09-21  Chris Moller  <moller@mollerware.com>
+
+	* frysk2131/ptrace-test.c: Simplified test to demonstrate
+	PTRACE_DETACH failure under utrace-compatible ptrace.
+
 2006-09-20  Chris Moller  <moller@mollerware.com>
 
 	* frysk2131/ptrace-test.c: Added test to demonstrate PTRACE_DETACH
